syntax = "proto3";

package scan;

import "google/api/annotations.proto";

service Scan {
  rpc Start (StartRequest) returns (StartResponse) {
    option (google.api.http) = {
      post: "/scan"
      body: "*"
    };
  }
  rpc Status (StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      get: "/scan/{id}"
    };
  }
  rpc Cancel (StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      delete: "/scan/{id}"
    };
  }
}

message StartRequest {
  string application = 1;
  string mac = 2;
  int64 timeout = 3;
}

message StartResponse {
  string id = 1;
}

message StatusRequest {
  string id = 1;
}

message StatusResponse {
  enum State {
    _ = 0;
    STARTED = 1;
    COMPLETED = 2;
    CANCELLED = 3;
    FAILED = 4;
    TIMED_OUT = 5;
  }
  message Result {
    string application = 1;
    string mac = 2;
    string ip = 3;
  }
  string id = 1;
  StartRequest startRequest = 2;
  State state = 3;
  repeated Result results = 4;
  string message = 5;
  int64 started = 6;
  int64 completed = 7;
  int64 duration = 8;
}


